// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`puppeteer > puppeteer 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "commonjs": true,
      "es2025": true,
      "node": true,
      "shared-node-browser": true,
    },
    "ignorePatterns": [
      "**/node_modules",
      "**/build/",
      "**/lib/",
      "**/bin/",
      "**/*.tsbuildinfo",
      "**/*.api.json",
      "**/*.tgz",
      "**/yarn.lock",
      "**/.docusaurus/",
      "**/.cache-loader",
      "test/output-*/",
      "**/.dev_profile*",
      "**/coverage/",
      "**/generated/",
      "**/.eslintcache",
      "**/.cache/",
      "**/.vscode",
      "!.vscode/extensions.json",
      "!.vscode/*.template.json",
      "**/.devcontainer",
      "**/.DS_Store",
      "**/.env.local",
      "**/.env.development.local",
      "**/.env.test.local",
      "**/.env.production.local",
      "**/npm-debug.log*",
      "**/yarn-debug.log*",
      "**/yarn-error.log*",
      "**/.wireit",
      "**/assets/",
      "**/third_party/",
      "packages/ng-schematics/sandbox/**/*",
      "packages/ng-schematics/multi/**/*",
      "packages/ng-schematics/src/**/files/",
      "examples/puppeteer-in-browser/out/**/*",
      "examples/puppeteer-in-browser/node_modules/**/*",
      "examples/puppeteer-in-extension/out/**/*",
      "examples/puppeteer-in-extension/node_modules/**/*",
    ],
    "plugins": [
      "import",
    ],
    "rules": {
      "curly": [
        "error",
        "all",
      ],
      "eqeqeq": [
        "error",
      ],
      "import/no-cycle": [
        "error",
        {
          "maxDepth": Infinity,
        },
      ],
      "no-caller": "error",
      "no-cond-assign": "error",
      "no-debugger": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty-character-class": "error",
      "no-labels": "error",
      "no-multi-str": "error",
      "no-self-compare": "error",
      "no-shadow-restricted-names": "error",
      "no-unsafe-negation": "error",
      "no-unused-vars": [
        "error",
        {
          "args": "none",
          "vars": "local",
          "varsIgnorePattern": "([fx]?describe|[fx]?it|beforeAll|beforeEach|afterAll|afterEach)",
        },
      ],
      "no-var": "error",
      "no-with": "error",
      "radix": "error",
      "require-yield": "error",
      "valid-typeof": "error",
    },
  },
  "warnings": [
    "ignore allow list is currently not supported: !.vscode/extensions.json",
    "ignore allow list is currently not supported: !.vscode/*.template.json",
    "unsupported rule, but in development: import/named",
    "unsupported rule: arrow-body-style",
    "unsupported rule: prettier/prettier",
    "unsupported rule: spaced-comment",
    "unsupported rule: accessor-pairs",
    "unsupported rule: new-parens",
    "unsupported rule: prefer-const",
    "unsupported rule: max-len",
    "unsupported rule: no-implied-eval",
    "unsupported rule: no-new-object",
    "unsupported rule: no-octal-escape",
    "unsupported rule, but in development: no-unreachable",
    "unsupported rule: template-curly-spacing",
    "unsupported rule: mocha/no-exclusive-tests",
    "unsupported rule: import/order",
    "unsupported rule: @stylistic/func-call-spacing",
    "unsupported rule: @stylistic/semi",
    "unsupported rule: rulesdir/prettier-comments",
    "unsupported rule: rulesdir/extensions",
    "unsupported rule: rulesdir/check-license",
    "unsupported rule, but in development: constructor-super",
    "unsupported rule, but in development: getter-return",
    "unsupported rule, but in development: no-undef",
    "unsupported rule, but in development: no-unreachable",
    "unsupported rule: prefer-const",
    "unsupported rule, but in development: constructor-super",
    "unsupported rule, but in development: getter-return",
    "unsupported rule, but in development: no-undef",
    "unsupported rule, but in development: no-unreachable",
    "unsupported rule: prefer-const",
    "unsupported rule, but in development: constructor-super",
    "unsupported rule, but in development: getter-return",
    "unsupported rule, but in development: no-undef",
    "unsupported rule, but in development: no-unreachable",
    "unsupported rule: prefer-const",
    "unsupported rule: @typescript-eslint/class-literal-property-style",
    "unsupported rule: @typescript-eslint/consistent-type-assertions",
    "unsupported rule: rulesdir/use-using",
    "unsupported rule: @typescript-eslint/no-unnecessary-template-expression",
    "unsupported rule: @typescript-eslint/explicit-module-boundary-types",
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: @typescript-eslint/no-floating-promises",
    "unsupported rule: @typescript-eslint/return-await",
    "unsupported rule, but in development: @typescript-eslint/consistent-type-imports",
    "unsupported rule: @typescript-eslint/consistent-type-exports",
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: tsdoc/syntax",
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: mocha/no-skipped-tests",
    "unsupported rule: mocha/no-identical-title",
  ],
}
`;

exports[`puppeteer upgrade > puppeteer--upgrade 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "commonjs": true,
      "es2025": true,
      "node": true,
      "shared-node-browser": true,
    },
    "ignorePatterns": [
      "**/node_modules",
      "**/build/",
      "**/lib/",
      "**/bin/",
      "**/*.tsbuildinfo",
      "**/*.api.json",
      "**/*.tgz",
      "**/yarn.lock",
      "**/.docusaurus/",
      "**/.cache-loader",
      "test/output-*/",
      "**/.dev_profile*",
      "**/coverage/",
      "**/generated/",
      "**/.eslintcache",
      "**/.cache/",
      "**/.vscode",
      "!.vscode/extensions.json",
      "!.vscode/*.template.json",
      "**/.devcontainer",
      "**/.DS_Store",
      "**/.env.local",
      "**/.env.development.local",
      "**/.env.test.local",
      "**/.env.production.local",
      "**/npm-debug.log*",
      "**/yarn-debug.log*",
      "**/yarn-error.log*",
      "**/.wireit",
      "**/assets/",
      "**/third_party/",
      "packages/ng-schematics/sandbox/**/*",
      "packages/ng-schematics/multi/**/*",
      "packages/ng-schematics/src/**/files/",
      "examples/puppeteer-in-browser/out/**/*",
      "examples/puppeteer-in-browser/node_modules/**/*",
      "examples/puppeteer-in-extension/out/**/*",
      "examples/puppeteer-in-extension/node_modules/**/*",
    ],
    "plugins": [
      "import",
    ],
    "rules": {
      "curly": [
        "error",
        "all",
      ],
      "eqeqeq": [
        "error",
      ],
      "import/no-cycle": [
        "error",
        {
          "maxDepth": Infinity,
        },
      ],
      "no-labels": "error",
      "no-multi-str": "error",
      "no-self-compare": "error",
      "no-unused-vars": [
        "error",
        {
          "args": "none",
          "vars": "local",
          "varsIgnorePattern": "([fx]?describe|[fx]?it|beforeAll|beforeEach|afterAll|afterEach)",
        },
      ],
      "no-var": "error",
      "radix": "error",
    },
  },
  "warnings": [
    "ignore allow list is currently not supported: !.vscode/extensions.json",
    "ignore allow list is currently not supported: !.vscode/*.template.json",
    "unsupported rule, but in development: import/named",
    "unsupported rule: arrow-body-style",
    "unsupported rule: prettier/prettier",
    "unsupported rule: spaced-comment",
    "unsupported rule: accessor-pairs",
    "unsupported rule: new-parens",
    "unsupported rule: prefer-const",
    "unsupported rule: max-len",
    "unsupported rule: no-implied-eval",
    "unsupported rule: no-new-object",
    "unsupported rule: no-octal-escape",
    "unsupported rule, but in development: no-unreachable",
    "unsupported rule: template-curly-spacing",
    "unsupported rule: mocha/no-exclusive-tests",
    "unsupported rule: import/order",
    "unsupported rule: @stylistic/func-call-spacing",
    "unsupported rule: @stylistic/semi",
    "unsupported rule: rulesdir/prettier-comments",
    "unsupported rule: rulesdir/extensions",
    "unsupported rule: rulesdir/check-license",
    "unsupported rule, but in development: constructor-super",
    "unsupported rule, but in development: getter-return",
    "unsupported rule, but in development: no-undef",
    "unsupported rule, but in development: no-unreachable",
    "unsupported rule: prefer-const",
    "unsupported rule, but in development: constructor-super",
    "unsupported rule, but in development: getter-return",
    "unsupported rule, but in development: no-undef",
    "unsupported rule, but in development: no-unreachable",
    "unsupported rule: prefer-const",
    "unsupported rule, but in development: constructor-super",
    "unsupported rule, but in development: getter-return",
    "unsupported rule, but in development: no-undef",
    "unsupported rule, but in development: no-unreachable",
    "unsupported rule: prefer-const",
    "unsupported rule: @typescript-eslint/class-literal-property-style",
    "unsupported rule: @typescript-eslint/consistent-type-assertions",
    "unsupported rule: rulesdir/use-using",
    "unsupported rule: @typescript-eslint/no-unnecessary-template-expression",
    "unsupported rule: @typescript-eslint/explicit-module-boundary-types",
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: @typescript-eslint/no-floating-promises",
    "unsupported rule: @typescript-eslint/return-await",
    "unsupported rule, but in development: @typescript-eslint/consistent-type-imports",
    "unsupported rule: @typescript-eslint/consistent-type-exports",
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: tsdoc/syntax",
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: mocha/no-skipped-tests",
    "unsupported rule: mocha/no-identical-title",
  ],
}
`;
